bad/if_else_cond_string.example_compiler_output
ERROR
[1mbad/if_else_cond_string.lat:3:7: [1;31merror: [0;1mif condition has to be of type `boolean`, not `string`[m
	if ("") {} else {}
	     [1;32m^[m
